# CompGeom

./: .gitignore  CMakeLists.txt  README.md
bash/: CMakeLists.txt  MeshSphere.cxx  MeshToSimplex.cxx  TriangulatePolygon.cxx  TriangulateSquare.cxx
data/: sphere.stl
lib/CGAL_EXT/: Parametric_function.h  Polygon_IO_OBJ.h  Polygon_IO_OBJ.hxx  Polygon_decorator.h  Polygon_decorator.hxx  Polygon_readOBJ.h  Polygon_readOBJ.hxx  Sphere_function.h
prototypes/: CircumCircleAndSphere.lyx  CircumCircleAndSphere.maxima  Helpers.py  Polygon.py  Sphere.cxx  Sphere.py  TriangulateMonotones.py
