## =========================================================================
## @author Leonardo Florez-Valencia (florez-l@javeriana.edu.co)
## =========================================================================

add_executable(CompGeom_TriangulatePolygon TriangulatePolygon.cxx)
target_link_libraries(CompGeom_TriangulatePolygon CGAL::CGAL)

## eof - CMakeLists.txt
